# cuqdyn-c

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  Singularity  build.sh  deps.cmake  dev_container.sh  fort.1  intel_toolchain.cmake  mpi2_toolchain.cmake  mpi_toolchain.cmake  notes  plot.py  serial_toolchain.cmake  stress_test.sh  test.sh  test_cli.sh  toolchain.cmake
cli-lib/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: edo_solver.h  ess_solver.h  lib.h  lotka_volterra.h  math.h  matlab.h  ode_solver.h
lib/src/: edo_solver.c  ess_solver.c  lib.c  lotka_volterra.c  math.c  matlab.c  ode_solver.c
modules/cli/: CMakeLists.txt
modules/cli/include/: main.h
modules/cli/include/handlers/: help.h  params.h  solve.h  version.h
modules/cli/src/: main.c
modules/cli/src/handlers/: help.c  params.c  solve.c  version.c
modules/cuqdyn-c/: CMakeLists.txt  example_conf.xml
modules/cuqdyn-c/include/: config.h  cuqdyn.h  cuqdyn_version.in.h  data_reader.h  ess_solver.h  functions.h  matlab.h  ode_solver.h  states_transformer.h
modules/cuqdyn-c/include/functions/: functions.h  lotka_volterra.h
modules/cuqdyn-c/src/: config.c  cuqdyn.c  data_reader.c  ess_solver.c  functions.c  matlab.c  ode_solver.c  states_transformer.c
modules/cuqdyn-c/src/functions/: custom.c  lotka_volterra.c  muparser_wrapper.cpp
modules/dotmat-introspector/: CMakeLists.txt
modules/dotmat-introspector/src/: main.c
modules/mexpreval/: Cargo.toml
modules/mexpreval/benches/: eval_f_exprs_bench.rs
modules/mexpreval/include/: mexpreval.h
modules/mexpreval/src/: config.rs  lib.rs  mexpreval.rs  models.rs  states_transformers.rs
modules/sacess/: CMakeLists.txt
modules/sacess/benchmarks/systemsBiology/BioPredyn/B1/: amigoRHS_B1.c  amigoRHS_B1.h
modules/sacess/benchmarks/systemsBiology/BioPredyn/B2/: amigoRHS_B2.c  amigoRHS_B2.h
modules/sacess/benchmarks/systemsBiology/BioPredyn/B3/: amigoRHS_B3.c  amigoRHS_B3.h
modules/sacess/benchmarks/systemsBiology/BioPredyn/B4/: amigoRHS_B4.c  amigoRHS_B4.h
modules/sacess/benchmarks/systemsBiology/BioPredyn/B5/: amigoRHS_B5.c  amigoRHS_B5.h
modules/sacess/benchmarks/systemsBiology/BioPredyn/B6/fly/: solvers.c  solvers.h
modules/sacess/benchmarks/systemsBiology/others/3-step_pathway/: amigoRHS_3step.c  amigoRHS_3step.h
modules/sacess/benchmarks/systemsBiology/others/Nfkb/: amigoRHS_NFKB.c  amigoRHS_NFKB.h
modules/sacess/benchmarks/systemsBiology/others/circadian/: amigoRHS_CIRCADIAN.c  amigoRHS_CIRCADIAN.h
modules/sacess/include/: sacess_version.in.h
modules/sacess/include/input/: input_module.h
modules/sacess/include/method_module/: amigoRHS.h  evaluationinterface.h  solversinterface.h  structure_paralleltestbed.h
modules/sacess/include/output/: output.h
modules/sacess/libAMIGO/include/include_amigo/: AMIGO_model.h  AMIGO_pe.h  AMIGO_problem.h  simulate_amigo_model.h
modules/sacess/libAMIGO/src/src_amigo/: AMIGO_model.c  AMIGO_pe.c  AMIGO_problem.c  simulate_amigo_model.c
modules/sacess/libAMIGO/src/src_lbode/: lbode_AMIGO_rhs.c  mxLbodeAmigoInterface.c  simulateODE.c
modules/sacess/src/: setup_benchmarks.c
modules/sacess/src/example/: main_file.c
modules/sacess/src/input_module/: input_AMIGO.c  input_module.c
modules/sacess/src/method_module/: common_solver_operations.c  localsolvers.c  parallel_functions.c  solversinterface.c  structure_paralleltestbed.c
modules/sacess/src/method_module/eSS/: parallel_functions_cooperative_eSS.c
modules/sacess/src/method_module_fortran/eSS/: acessdist.f90  common_functions.f90  essm.f90  sacess.f90  scattersearch.f90  scattersearchtypes.f90
modules/sacess/src/output/: output.c
modules/sacess/src/structure_data/: dynamic_list.c
sacess/: CMakeLists.txt
sacess/benchmarks/systemsBiology/: benchmark_functions_SystemBiology.h
sacess/benchmarks/systemsBiology/BioPredyn/B1/: amigoRHS_B1.h
sacess/benchmarks/systemsBiology/BioPredyn/B2/: amigoRHS_B2.h
sacess/benchmarks/systemsBiology/BioPredyn/B3/: amigoRHS_B3.h
sacess/benchmarks/systemsBiology/BioPredyn/B4/: amigoRHS_B4.h
sacess/benchmarks/systemsBiology/BioPredyn/B5/: amigoRHS_B5.h
sacess/benchmarks/systemsBiology/BioPredyn/B6/fly/: solvers.h
sacess/benchmarks/systemsBiology/BioPredyn/B6/lib32/sundials-2.5.0/include/cvode/: cvode_bandpre.h  cvode_bbdpre.h  cvode_diag.h  cvode_direct.h  cvode_spbcgs.h  cvode_spgmr.h  cvode_sptfqmr.h
sacess/benchmarks/systemsBiology/others/Nfkb/: amigoRHS_NFKB.h
sacess/benchmarks/systemsBiology/others/circadian/: amigoRHS_CIRCADIAN.h
sacess/include/method_module/: benchmark_functions_SystemBiology.h  structure_paralleltestbed.h
sacess/libAMIGO/include/include_amigo/: AMIGO_model.h  simulate_amigo_model.h
sacess/libAMIGO/src/src_lbode/: simulateODE.c
sacess/src/: main_file.c
sacess/src/method_module/: common_solver_operations.c  evaluationinterface.c
sacess/src/method_module/eSS/: parallel_functions_cooperative_eSS.c
sacess/src/method_module_fortran/eSS/: cess.f90
sacess/src/output/: output.c
src/: CMakeLists.txt  lib.c  lotka_volterra.c  main.c  math.c  matlab.c
tests/: CMakeLists.txt  test_cuqdyn_algo.c  test_data_reader.c  test_ess_obj_function.c  test_ess_solver.c  test_get_matrix_cols_median.c  test_matlab.c  test_matrix_array_get_median.c  test_ode_solver.c  test_parse_cuqdyn_conf.c  test_sundials_ode.c  test_time_constraints_steps.c
tests/data/: alpha_pinene_cuqdyn_config.xml  alpha_pinene_ess_config_nl2sol.dn2fb.xml  alpha_pinene_paper_data.txt  ess_config.xml  logistic_model_cuqdyn_config.xml  logistic_model_ess_config_nl2sol.dn2fb.xml  lotka_volterra_cuqdyn_config.xml  lotka_volterra_ess_config.xml  lotka_volterra_ess_config_dhc.xml  lotka_volterra_ess_config_misqp.xml  lotka_volterra_ess_config_nl2sol.dn2fb.xml  lotka_volterra_ess_config_nl2sol.dn2gb.xml  lotka_volterra_ess_mpi_config_nl2sol.dn2gb.xml  lotka_volterra_ess_serial_config_nl2sol.dn2gb.xml  lotka_volterra_paper_data.txt  nfkb_cuqdyn_config.xml  nfkb_ess_mpi_config.xml  obj_function_cuqdyn_config.xml  obj_function_ess_config_nl2sol.dn2fb.xml  test_data.txt
(+300 files in other folders)
