[package]
name = "mexpreval"
version = "0.1.0"
edition = "2018"

[dependencies]
meval = { version = "0.2.0" }

[dev-dependencies]
criterion = { version = "0.5.1" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[[bench]]
name = "eval_f_exprs_bench"
harness = false

[lib]
name = "mexpreval"
crate-type = ["cdylib", "lib"]
